more header progress

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,7 +4,12 @@
 }
 
 %header-font {
-  font-family: 'Bitter', serif;
+  // font-family: 'Bitter', serif;
+
+
+  font-family: 'Roboto Slab', serif;
+
+
 }
 
 %txt-font {
