--- a/scss/header.scss
+++ b/scss/header.scss
@@ -12,8 +12,8 @@ $svgSize: 7.4mm;
 
     h1 {
       @extend %header-font;
-      font-weight: 900;
-      font-size: 11.7mm;
+      font-weight: 700;
+      font-size: 12.5mm;
       float: left;
       //   font-variant: small-caps;
       text-transform: uppercase;
@@ -57,12 +57,17 @@ $svgSize: 7.4mm;
 
     label {
       @extend %txt-font;
-      margin: auto 0;
-      font-size: 4.5mm;
+      font-size: 4.1mm;
+      display: inline-block;
+      margin: 0 auto;
+      height: 100%;
+      padding: 0 auto;
     }
 
     a > label {
-      margin: auto 0;
+      
+      
+      
     }
 
     a,
