got header in order and started body

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -6,12 +6,12 @@
 %header-font {
   // font-family: 'Bitter', serif;
 
+  text-transform: uppercase;
 
   font-family: 'Roboto Slab', serif;
-
-
 }
 
 %txt-font {
-  font-family: 'Roboto', sans-serif;
+  // font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
