--- a/scss/global.scss
+++ b/scss/global.scss
@@ -5,13 +5,14 @@
 
 %header-font {
   // font-family: 'Bitter', serif;
-
   text-transform: uppercase;
-
-  font-family: 'Roboto Slab', serif;
+  // font-family: "Roboto Slab", serif;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 %txt-font {
   // font-family: 'Roboto', sans-serif;
-  font-family: 'Raleway', sans-serif;
+  // font-family: "Raleway", sans-serif;
+
+  font-family: 'Open Sans', sans-serif;
 }
