--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,9 +1,10 @@
-@import 'global';
+@import "global";
 
 .section {
   margin-bottom: 3mm;
   h2 {
     @extend %header-font;
+    border-bottom: 2px solid black;
   }
 
   ul {
@@ -16,25 +17,33 @@
 
   li {
     @extend %txt-font;
-    margin-bottom: 0.7mm;
+    margin-bottom: 0.1mm;
     font-size: 4.05mm;
   }
 
   li::before {
-    content: '—';
+    content: "—";
   }
 
   .subsection {
     margin-top: 2mm;
     h3 {
       text-transform: none;
-      font-weight: 900;
-      font-size: 4.6mm;
+      font-weight: 700;
+      font-size: 4.05mm;
       @extend %txt-font;
+      float: left;
+    }
+
+    span {
+      @extend %txt-font;
+      font-style: italic;
+      float: right;
     }
 
     ul {
       margin-top: 0mm;
+      clear: both;
     }
   }
 }
