--- a/scss/global.scss
+++ b/scss/global.scss
@@ -7,12 +7,14 @@
   // font-family: 'Bitter', serif;
   text-transform: uppercase;
   // font-family: "Roboto Slab", serif;
-  font-family: "Fira Sans", sans-serif;
+  font-family: 'Fira Sans', sans-serif;
+  font-display: auto;
 }
 
 %txt-font {
   // font-family: 'Roboto', sans-serif;
   // font-family: "Raleway", sans-serif;
-  font-size: 3.95mm;
-  font-family: "Open Sans", sans-serif;
+  font-size: 3.53mm;
+  font-family: 'Open Sans', sans-serif;
+  font-display: auto;
 }
