--- a/scss/header.scss
+++ b/scss/header.scss
@@ -64,18 +64,21 @@ $svgSize: 7.4mm;
 
     label {
       @extend %txt-font;
+      @extend %noselect;
+
       top: 50%;
       transform: translateY(-50%);
       position: absolute;
     }
 
+    // TODO: fix the link hover issue
     a,
     a:visited,
     a:link,
     a:active > label {
       color: black;
-      position: relative;
       text-decoration: none;
+      position: relative;
     }
 
     a:hover > label {
