--- a/scss/header.scss
+++ b/scss/header.scss
@@ -37,6 +37,7 @@ $svgSize: 7.4mm;
     width: 100% - $headerTextSize;
     float: left;
     padding-top: 1.2mm;
+
     span {
       display: flex;
       margin-bottom: 1mm;
@@ -64,11 +65,9 @@ $svgSize: 7.4mm;
 
     label {
       @extend %txt-font;
-      @extend %noselect;
-
-      top: 50%;
-      transform: translateY(-50%);
-      position: absolute;
+      height: 80%;
+      margin-top: auto;
+      margin-bottom: auto;
     }
 
     // TODO: fix the link hover issue
@@ -78,10 +77,9 @@ $svgSize: 7.4mm;
     a:active > label {
       color: black;
       text-decoration: none;
-      position: relative;
     }
 
-    a:hover > label {
+    a:hover {
       color: rebeccapurple;
       cursor: pointer;
     }
