--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,7 +1,7 @@
 @import 'global';
 
 .section {
-  margin-bottom: 3mm;
+  margin-bottom: 2mm;
   h2 {
     @extend %header-font;
     border-bottom: 2px solid black;
@@ -18,8 +18,6 @@
   li {
     @extend %txt-font;
     @extend %noselect;
-
-    margin-bottom: 0.01mm;
   }
 
   li::before {
@@ -28,7 +26,7 @@
   }
 
   .subsection {
-    margin-top: 2mm;
+    margin-top: 1mm;
     h3 {
       text-transform: none;
       font-weight: 700;
@@ -39,10 +37,11 @@
 
     span {
       @extend %txt-font;
-
+      width: 100%;
       p {
         float: right;
         font-style: italic;
+        padding-right: 0.5mm;
       }
     }
 
@@ -50,6 +49,16 @@
       margin-top: 0mm;
       clear: both;
       @extend %noselect;
+
+      li {
+        a {
+          color: black;
+        }
+
+        a:hover {
+          color: rebeccapurple;
+        }
+      }
     }
   }
 }
