--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,7 +10,7 @@ $svgSize: 7.4mm;
   // border and spacing stuff
   // border-bottom: 1px solid black;
   // padding-bottom: 2mm;
-  margin-bottom: 5mm;
+  margin-bottom: 3.2mm;
 
   #rightText {
     width: $headerTextSize;
@@ -47,7 +47,7 @@ $svgSize: 7.4mm;
       vertical-align: middle;
     }
 
-    $githubSizeModifier: -0.1mm;
+    $githubSizeModifier: -0.12mm;
 
     #github {
       width: $svgSize + $githubSizeModifier;
@@ -65,6 +65,8 @@ $svgSize: 7.4mm;
 
     label {
       @extend %txt-font;
+      @extend %noselect;
+
       height: 80%;
       margin-top: auto;
       margin-bottom: auto;
