--- a/scss/global.scss
+++ b/scss/global.scss
@@ -7,7 +7,10 @@
   // font-family: 'Bitter', serif;
   text-transform: uppercase;
   // font-family: "Roboto Slab", serif;
-  font-family: 'Fira Sans', sans-serif;
+  // font-family: 'Fira Sans', sans-serif;
+
+  font-family: 'Hind', sans-serif;
+
   font-display: auto;
 }
 
