chore, cleaning up scss

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -76,7 +76,7 @@ $svgSize: 7.4mm;
     a,
     a:visited,
     a:link,
-    a:active > label {
+    a:active > p {
       color: black;
       text-decoration: none;
     }
