--- a/scss/header.scss
+++ b/scss/header.scss
@@ -7,9 +7,6 @@ $svgSize: 7.4mm;
   display: flex;
   height: fit-content;
 
-  // border and spacing stuff
-  // border-bottom: 1px solid black;
-  // padding-bottom: 2mm;
   margin-bottom: 3.2mm;
 
   #rightText {
@@ -23,9 +20,10 @@ $svgSize: 7.4mm;
       //   font-variant: small-caps;
       margin-top: -0.1 mm;
       margin-bottom: -1.3mm;
-      span {
-        font-size: 13mm;
-      }
+    }
+
+    h1::first-letter {
+      font-size: 13mm;
     }
   }
 
