--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,6 +1,7 @@
 %all-text {
   margin: 0;
   padding: 0;
+  font-display: block;
 }
 
 %header-font {
@@ -10,8 +11,6 @@
   // font-family: 'Fira Sans', sans-serif;
 
   font-family: 'Hind', sans-serif;
-
-  font-display: auto;
 }
 
 %txt-font {
@@ -19,7 +18,6 @@
   // font-family: "Raleway", sans-serif;
   font-size: 3.53mm;
   font-family: 'Open Sans', sans-serif;
-  font-display: auto;
 }
 
 %noselect {
