--- a/scss/header.scss
+++ b/scss/header.scss
@@ -20,6 +20,7 @@ $svgSize: 7.4mm;
       //   font-variant: small-caps;
       margin-top: -0.1 mm;
       margin-bottom: -1.3mm;
+      height: 19mm;
     }
 
     h1::first-letter {
