--- a/styles/body.scss
+++ b/styles/body.scss
@@ -92,7 +92,7 @@ $beforeContent: ' ';
   }
 }
 
-// override for skills
+// override for education
 #education > ul {
   margin-left: 0;
   li::before {
