--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,8 +10,9 @@
 }
 
 %txt-font {
-  font-size: 3.53mm;
+  font-size: 3.56mm;
   font-family: 'Open Sans', sans-serif;
+  line-height: 140%;
 }
 
 %noselect {
