Post convoy revision (#24)
* lockfile fixup

* Move index.html

* No volta

* Revert "Move index.html"

This reverts commit b962308d464736785fa902321a9ad4c0a901fba7.

* Update target browser

* Move stuff

* Post convoy enhancements

* npm dedupe

* Eliminate commented out fonts

* Correct comment

* Fix some content

* Fix charset

* Revert "npm dedupe"

This reverts commit ff4278f2c1b32eaad4abced8055786bf96dd3d37.

* Font tweaks

* Add a bullet for wiki migration

* corresponding -> system

* Remove language from AWS entry

* Make first Convoy team name more clear

* Be a bit more specific about system requirements

* enabled -> unlocked

--- a/styles/body.scss
+++ b/styles/body.scss
@@ -1,7 +1,7 @@
 @import 'global';
 
 .section {
-  margin-bottom: 2mm;
+  margin-bottom: 3mm;
   h2 {
     @extend %header-font;
     border-bottom: 2px solid black;
@@ -92,7 +92,7 @@ $beforeContent: ' ';
   }
 }
 
-// override for skills
+// override for education
 #education > ul {
   margin-left: 0;
   li::before {
