--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,19 +5,14 @@
 }
 
 %header-font {
-  // font-family: 'Bitter', serif;
   text-transform: uppercase;
-  // font-family: "Roboto Slab", serif;
-  // font-family: 'Fira Sans', sans-serif;
-
   font-family: 'Hind', sans-serif;
 }
 
 %txt-font {
-  // font-family: 'Roboto', sans-serif;
-  // font-family: "Raleway", sans-serif;
-  font-size: 3.53mm;
+  font-size: 3.56mm;
   font-family: 'Open Sans', sans-serif;
+  line-height: 140%;
 }
 
 %noselect {
